--- a/src/app/components/altas/gastos-generales/gastos-generales.component.html
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.html
@@ -1,134 +1,119 @@
 <navbar></navbar>
 <h1 class="center">{{ titulo }}</h1>
-<div class="m-3 card ">
+<div class="m-2 card">
+    <app-pago [email]="updateG.solicitante" *ngIf="userLog.rol !=='Aprobador' && updateG.estatus == 'Aprobado'"></app-pago>
+
     <div class="loading" *ngIf="loading">Loading&#8230;</div>
-    <form class="m-3" [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
-        <div class="around">
-            <div *ngIf="tesorero" class="mt-3 col-md-3">
-                <label class="control-label" for="jefe">Solicitante:</label><br>
-                <select id="jefe" formControlName="solicitante" class="form-control">
-                    <option disabled>ASG</option>
-                    <option *ngIf="updateG"  disabled [value]="updateG?.solicitante">{{updateG?.solicitante}} </option>
-                    <option *ngFor="let jefe of jefes" >{{jefe.correo}} </option>
-                  </select>
+    <form class="p-3" [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
+        <div class="between">
+            <div *ngIf="userLog.rol !== 'Aprobador'" class="mt-3 col-md-4">
+                <label class="control-label" for="jefe">Solicitante</label><br>
+                <select id="jefe" formControlName="solicitante" class="form-control form-control-sm" [ngClass]="{ 'is-invalid': submitted && fval.solicitante.errors }">
+                    <option  disabled [value]="fval.solicitante.value">{{fval.solicitante.value }} </option>
+                    <option *ngFor="let lider of lideres">{{lider.correo}} </option>
+                </select>
             </div>
-            <br>
-            <div class="mt-3 col-md-3">
-                <label class="control-label" for="proyecto">Proyecto:</label><br>
-                <select id="proyecto" class="form-control" formControlName="proyecto" (change)="valor(gastosForm.value.proyecto)">
-                    <option disabled value='Proyecto'>Proyecto</option>
-                    <option *ngIf="updateG"  disabled [value]="updateG?.proyecto">{{updateG?.proyecto}} </option>
-                    <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
-                  </select>
-                <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
+            <div class="mt-3 col-md-4">
+                <label class="control-label" for="proyecto">Proyecto</label><br>
+                <select id="proyecto" class="form-control" formControlName="proyecto" (change)="buscarProyecto(gastosForm.value.proyecto)" [ngClass]="{ 'is-invalid': submitted && fval.proyecto.errors }">
+                    <option  disabled  [value]="fval.proyecto.value">{{fval.proyecto.value | titlecase}} </option>
+                    <option *ngFor="let proyecto of proyectos">{{proyecto.nombre | titlecase}} </option>
+                </select>
             </div>
-            <br>
-
-            <div class="mt-3 col-md-3">
-                <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                <input *ngIf="proyecto" class="form-control" id="fecha" min="{{proyecto.fechaini}}" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                <p #error id="error" *ngIf="submitted && fval.fecha.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+            <div class="mt-3 col-md-4">
+                <label class="control-label" for="fecha">Fecha<span><i class="ml-2 far fa-calendar-alt"></i></span> </label>
+                <input class="form-control" id="fecha" [min]="proyecto.fechaini" formControlName="fecha" type="date" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.fecha.errors }">
             </div>
-            <br>
-
-            <div class="mt-3 col-md-3">
-                <label class="control-label" for="montodisp">Monto Disponible: </label>
-                <input disabled class="form-control-sm" id="montodisp" value="{{saldoDisp |currency}}" type="text">
+            <div class="mt-3 col-md-4">
+                <label class="control-label" for="montodisp">Monto Disponible</label>
+                <input disabled class="form-control-sm" id="montodisp" [value]="saldoDisp |currency" type="text">
             </div>
-        </div><br>
-        <div class="around">
-            <div class="mt-3 class">
-                <label class="control-label " for="monto ">Monto: </label>
-                <input class="form-control " id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
-            </div>
-            <div class="mt-3 class ">
-                <label class="control-label" for="motivo">Motivo: </label>
-                <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors } ">
-            </div>
-        </div><br>
-        <div class="around">
-            <div class="mt-3 col-md-3">
-                <label class="control-label mr-2" for="tipo_gasto">Tipo gasto:</label><br>
-                <select id="tipo_gasto" class="selector" formControlName="tipo_gasto">
-                <option disabled value='Tipo gasto'>Tipo gasto</option>
-                <option *ngFor="let gto of tipoGto " >{{gto.gasto}}</option>
+            <div class="mt-3 col-md-4">
+                <label class="control-label mr-2" for="tipo_gasto">Tipo gasto</label><br>
+                <select id="tipo_gasto" class="selector form-control" formControlName="tipo_gasto" [ngClass]="{ 'is-invalid': submitted && fval.tipo_gasto.errors }">
+                <option disabled [value]='fval.tipo_gasto.value'>{{fval.tipo_gasto.value | titlecase}}</option>
+                <option *ngFor="let gto of tipoGto">{{gto.gasto}}</option>
               </select>
-                <p id="error" *ngIf="submitted && fval.tipo_gasto.invalid">*Este campo no puede ir vacío</p>
             </div>
-            <br>
-            <div class="mt-3 col-md-3">
-                <label class="control-label">Reembolso: </label><br>
+            <div class="mt-3 class col-md-8">
+                <label class="control-label" for="monto">Monto</label>
+                <input class="form-control" id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
+            </div>
+            <div class="mt-3 class col-md-12">
+                <label class="control-label" for="motivo">Motivo</label>
+                <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkL_N($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
+            </div>
+            <div class="mt-3 col-md-4">
+                <label class="control-label">Reembolso</label><br>
                 <label class="switch">
-                        <input type="checkbox" name="check" id="check" formControlName="reembolso" (click)="cambio($event.target)">
+                        <input type="checkbox"name="check"id="check"formControlName="reembolso"(click)="cambio($event.target)">
                         <span class="slider round"></span>
-                      </label>
+                </label>
             </div>
             <br>
-            <div class="mt-3 col-md-3">
-                <label class="control-label mr-2">Estatus:</label><br>
+            <div class="mt-3 col-md-4">
+                <label class="control-label mr-2">Estatus</label><br>
                 <select formControlName="estatus">
-                    <option *ngIf="updateG"  disabled [value]="updateG?.estatus" >{{updateG?.estatus}}</option>
-                    <option *ngIf="!id_gasto" value='Aprobado'>Aprobado</option>
+                    <option  disabled [value]="fval.estatus.value">{{fval.estatus.value}}</option>
+                    <option *ngIf="updateG.estatus !=='Aprobado'"value='Aprobado'>Aprobado</option>
                     <option value='Pagado'>Pagado</option>
                 </select>
                 <p id="error" *ngIf="submitted && fval.estatus.invalid">*Este campo no puede ir vacío</p>
             </div>
 
-        </div> <br>
-        <div class="around">
-            <div class="mt-3 class">
-                <label class="control-label" for="observaciones">Observaciones: </label>
-                <input class="form-control-sm" id="observacionesaprobador" placeholder="Observaciones" formControlName="observacionesaprobador" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.observacionesaprobador.errors }"><br><br>
-                <input *ngIf=" (!aprobador && id_gasto)   || (updateG?.pago !== undefined && updateG?.observacionespagado !== (undefined || '') && sameU)" class="form-control-sm" id="observacionespagado" placeholder="Observaciones del tesorero o financiero" formControlName="observacionespagado"
-                    type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.observacionespagado.errors }">
+            <div class="mt-3 class col-md-12" *ngIf="id_gasto !== null">
+                <label class="control-label" for="observaciones">Observaciones</label>
+                <input class="form-control form-control-sm" id="observacionesaprobador" placeholder="Observaciones" formControlName="observacionesaprobador" type="text" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.observacionesaprobador.errors }"><br><br>
+                <input class="form-control form-control-sm" id="observacionespagado" placeholder="Observaciones" formControlName="observacionespagado" type="text" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.observacionespagado.errors }">
             </div>
-            <br>
         </div>
-        <br>
-        <label class="class ml-5 mt-3" *ngIf="!id_gasto">Subir comprobantes: </label><br>
-        <div *ngIf="!id_gasto" class="around">
-            <div *ngIf="(archivos.length <=  2)" class="drop-img mt-3 col-md-4">
-                <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
+        <div class="col-md-12 mt-3">
+            <label class="class" *ngIf="!id_gasto">Subir comprobantes </label><br>
+            <div *ngIf="!id_gasto" class="around">
+                <div *ngIf="(archivos.length <=  2)" class="drop-img  col-md-4">
+                    <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
 
-                    <div id="filesButton">
-                        <input id="fichero" type="file" accept="image/*, application/pdf, .xlsx, .xls" (change)="botonFiles($event)">
-                        <label for="fichero" class="circle"></label>
+                        <div id="filesButton">
+                            <input id="fichero" type="file" accept="image/*, application/pdf, .xlsx, .xls, text/xml" (change)="botonFiles($event)">
+                            <label for="fichero" class="circle"></label>
+                        </div>
                     </div>
+                    <br>
                 </div>
                 <br>
-            </div>
-            <br>
-            <div id="tabla" class=" mt-3 col-md-4">
-                <table class="table mt-3" *ngIf="archivos.length > 0">
-                    <thead>
-                        <tr>
-                            <th *ngFor="let ht of headTitle"> {{ht}}</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let archivo of archivos">
-                            <td>{{archivo.nombreArchivo}}
-                            </td>
-                            <td>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-striped  " role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
-                                </div>
-                                <i class="fas fa-times ex " (click)="limpiarArchivos(archivos,archivo)"></i>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div id="tabla" class="mt-3 col-md-6">
+                    <table class="table" *ngIf="archivos.length > 0">
+                        <thead>
+                            <tr>
+                                <th *ngFor="let ht of headTitle"> {{ht}}</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let archivo of archivos">
+                                <td>{{archivo.nombreArchivo}}
+                                </td>
+                                <td class="between">
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-striped" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
+                                    </div>
+                                    <i class="fas fa-times ex" (click)="limpiarArchivos(archivos,archivo)"></i>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
+
         <br>
-        <div *ngIf="actualizar" class="center mt-3">
-            <button mdbBtn mdbWavesEffect type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i *ngIf=" botonCancelar === 'Cancelar'" class="mr-3 fas fa-times"></i><i *ngIf=" botonCancelar !== 'Cancelar'"  class=" mr-3 fa fa-arrow-left" aria-hidden="true"></i>
+        <div *ngIf="actualizar" class="center">
+            <button mdbBtn mdbWavesEffect type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i *ngIf="botonCancelar === 'Cancelar'"class="mr-3 fas fa-times"></i><i *ngIf="botonCancelar !== 'Cancelar'"class="mr-3 fa fa-arrow-left"aria-hidden="true"></i>
                 {{botonCancelar}} </button>
-            <button mdbBtn mdbWavesEffect *ngIf=" botonCancelar === 'Cancelar'" type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
+            <button mdbBtn mdbWavesEffect *ngIf="botonCancelar === 'Cancelar'" type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
                     Actualizar</button>
         </div>
-        <div class="center mt-3">
-            <button mdbBtn mdbWavesEffect #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
+        <div class="center">
+            <button mdbBtn mdbWavesEffect #guardar *ngIf="!actualizar" type="submit" id="guardar" class="mt-3 col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
                 {{boton}}</button>
         </div>
     </form>
