--- a/src/app/components/altas/nomina/nomina.component.html
+++ b/src/app/components/altas/nomina/nomina.component.html
@@ -1,78 +1,53 @@
 <navbar></navbar>
 <h1 class="center">{{ titulo}} </h1>
-<div class="m-3 card ">
+<div class="m-2 card">
     <div class="loading" *ngIf="loading">Loading&#8230;</div>
-    <form class="m-3" [formGroup]="nominaForm" (ngSubmit)="onSubmit()">
-        <div class="around">
-            <div class="mt-3 col-md-3">
-                <label class="control-label" for="nombre">Usuarios:</label> <br>
-                <select id="nombre" formControlName="nombre">
-                                <option disabled value='ASG'>ASG</option>
-                                <option *ngFor="let resp of usuarios">{{resp.nombre}}</option>
+    <form class="p-3" [formGroup]="nominaForm" (ngSubmit)="onSubmit()">
+        <div class="between">
+            <div class="mt-3 col-md-5">
+                <label class="control-label" for="nombre">Usuarios</label> <br>
+                <select id="nombre" class="form-control form-control-sm" formControlName="nombre" [ngClass]="{ 'is-invalid ': submitted && fval.nombre.errors }">
+                    <option disabled [value]="fval.nombre.value" >{{fval.nombre.value}}</option>
+                                <option *ngFor="let resp of usuarios">{{resp.correo}}</option>
                 </select>
-                <p #error id="error" *ngIf="submitted && fval.estatus.invalid" class="mt-2">*Este campo no puede ir vacío</p>
             </div>
-            <br>
-            <div class="mt-3 col-md-2"><input type="text" id="vacio" disabled></div>
-            <br>
-            <div class="mt-3 col-md-3">
-                <label class="control-label mr-2" for="estatus">Estatus:</label><br>
-                <select id="estatus" formControlName="estatus">
-                    <option disabled >Activo</option>
+            <div class="mt-3 col-md-5">
+                <label class="control-label mr-2" for="estatus">Estatus</label><br>
+                <select id="estatus" class="form-control form-control-sm" formControlName="estatus" [ngClass]="{ 'is-invalid ': submitted && fval.estatus.errors }">
+                    <option disabled [value]="fval.estatus.value" >{{fval.estatus.value}}</option>
                   </select>
-                <p id="error " *ngIf="submitted && fval.estatus.invalid ">*Este campo no puede ir vacío</p>
             </div>
-        </div>
-        <div class="around">
-            <div class="mt-3 col-md-3">
-                <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
-                <select id="proyecto" formControlName="proyecto" (change)="valor(nominaForm.value.proyecto)">
-                    <option disabled value='Proyecto'>Proyecto</option>
-                    <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
+            <div class="mt-3 col-md-5">
+                <label class="control-label mr-2" for="proyecto">Proyecto</label><br>
+                <select id="proyecto" class="form-control form-control-sm" formControlName="proyecto" (change)="valor(nominaForm.value.proyecto)" [ngClass]="{ 'is-invalid ': submitted && fval.proyecto.errors }">
+                    <option disabled [value]="fval.proyecto.value" >{{fval.proyecto.value}}</option>
+                    <option *ngFor="let proyecto of proyectos">{{proyecto.nombre}} </option>
                   </select>
-                <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
             </div>
-            <br>
-            <div class="mt-3 col-md-2"><input type="text" id="vacio" disabled></div>
-            <br>
-            <div class="mt-3 col-md-3">
-                <label class="control-label" for="monto">Monto Disponible: </label>
-                <input disabled class="form-control-sm" id="monto" value="{{saldoDisp| currency}}" type="text">
+            <div class="mt-3 col-md-5">
+                <label class="control-label" for="monto">Monto Disponible</label>
+                <input disabled class="form-control form-control-sm" id="monto" [value]="saldoDisp | currency" type="text" [ngClass]="{ 'is-invalid ': submitted && fval.monto.errors }">
             </div>
-        </div>
-        <div *ngIf="proyecto" class="around">
-            <div class="mt-3 col-md-3">
-                <label class="control-label" for="fechaini">Fecha Inicio: <span><i class="far fa-calendar-alt"></i></span> </label>
-                <input class="form-control" min="{{proyecto.fechaini}}" id="fechaini" formControlName="fechaini" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                <p #error id="error" *ngIf="submitted && fval.fechaini.invalid" class="mt-2">*Este campo no puede ir vacío</p>
-            </div> <br>
-            <div class="mt-3 col-md-2"><input type="text" id="vacio" disabled></div>
-            <br>
-            <div class="mt-3 col-md-3 ">
-                <label class="control-labe" for="fechafin">Fecha Fin: <span><i class="far fa-calendar-alt "></i></span> </label>
-                <input class="form-control" min="{{nominaForm.value.fechaini}}" id="fechafin " formControlName="fechafin" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                <p #error id="error" *ngIf="submitted && fval.fechafin.invalid " class="mt-2">*Este campo no puede ir vacío</p>
+            <div class="mt-3 col-md-5">
+                <label class="control-label" for="fechaini">Fecha Inicio<span><i class="ml-2 far fa-calendar-alt"></i></span> </label>
+                <input class="form-control form-control-sm" [min]="proyecto.fechaini" id="fechaini" formControlName="fechaini" type="date" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid ': submitted && fval.fechaini.errors }">
+            </div>
+            <div class="mt-3 col-md-5">
+                <label class="control-label" for="fechafin">Fecha Fin<span><i class="ml-2 far fa-calendar-alt"></i></span> </label>
+                <input class="form-control form-control-sm" [min]="nominaForm.value.fechaini" id="fechafin" formControlName="fechafin" type="date" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid ': submitted && fval.fechafin.errors }">
+            </div>
+            <div class="mt-3 col-md-5">
+                <label class="control-label" for="salario">Salario</label><br>
+                <input class="form-control form-control-sm" id="salario" placeholder="Salario" formControlName="salario" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.salario.errors }">
+            </div>
+            <div class="mt-3 col-md-5">
+                <label class="control-label" for="aumento">Factor Costo</label><br>
+                <input class="form-control form-control-sm" id="aumento" formControlName="aumento" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.aumento.errors }">
             </div>
         </div>
-        <div class="around">
-            <div class="mt-3 col-md-3">
-                <label class="control-label" for="salario">Salario: </label><br>
-                <input class="form-control" id="salario" placeholder="Salario" formControlName="salario" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.salario.errors } ">
-            </div> <br>
-            <div class="mt-3 col-md-2"><input type="text" id="vacio" disabled></div>
-            <br>
-            <div class="mt-3 col-md-3 ">
-                <label class="control-labe" for="aumento">Factor Costo: </label><br>
-                <input class="form-control" id="aumento" formControlName="aumento" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.aumento.errors } ">
-                <p #error id="error" *ngIf="submitted && fval.aumento.invalid " class="mt-2">*Este campo no puede ir vacío</p>
-            </div>
-
-        </div>
-
-        <br>
-        <div *ngIf="actualizar" class="center mt-3 ">
-            <button mdbBtn mdbWavesEffect type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times "></i>Cancelar</button>
-            <button mdbBtn mdbWavesEffect type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt "></i>Actualizar</button>
+        <div *ngIf="actualizar" class="center mt-3">
+            <button mdbBtn mdbWavesEffect type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times"></i>Cancelar</button>
+            <button mdbBtn mdbWavesEffect type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>Actualizar</button>
         </div>
         <div class="center mt-3">
             <button mdbBtn mdbWavesEffect #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>{{boton}}</button>
