--- a/src/app/components/altas/reembolso/reembolso.component.html
+++ b/src/app/components/altas/reembolso/reembolso.component.html
@@ -1,105 +1,113 @@
 <navbar></navbar>
-<div class="column">
-    <h1 class="center">{{ titulo }}</h1>
-    <div class="m-3 card">
-        <div class="loading" *ngIf="loading">Loading&#8230;</div>
-        <form class="m-3" [formGroup]="reembolsoForm" (ngSubmit)="onSubmit()">
-            <div class="around">
-                <div class="mt-3 col-md-3">
-                    <label class="control-label mr-2" for="proyecto">Proyecto:</label><br>
-                    <select id="proyecto" formControlName="proyecto" (change)="valor(reembolsoForm.value.proyecto)">
-                        <option disabled value='Proyecto'>Proyecto</option>
-                        <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
-                      </select>
-                    <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
-                </div>
-                <div class="mt-3 col-md-3">
-                    <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt"></i></span> </label>
-                    <input *ngIf="proyecto || id_reembolso" class="form-control-sm" id="fecha" min="{{proyecto?.fechaini}}" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip" title="*Campo obligatorio">
-                    <p id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
-                </div>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label mr-2" for="estatus">Estatus:</label><br>
-                    <select id="estatus" formControlName="estatus">
-                        <option *ngIf="!id_reembolso" disabled value='Solicitar'>Solicitar</option>
-                        <option *ngIf="updateR"  disabled [value]="updateR?.estatus" >{{updateR?.estatus}}</option>
-                        <option *ngIf="aprobador" value='Aprobado'>Aprobado</option>
-                        <option *ngIf="aprobador" value='Rechazado'>Rechazado</option>
-                        <option *ngIf="!aprobador" value="Pagado">Pagado</option>
-                        </select>
-                </div>
-            </div>
-            <br>
-            <div class="around">
-                <div class="mt-3 class">
-                    <label class="control-label" for="monto">Monto: </label><br>
-                    <input class="form-control-sm" id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
-                </div>
-            </div>
-            <br>
-            <div class="around">
-                <div class="mt-3 class">
-                    <label class="control-label" for="motivo">Motivo: </label><br>
-                    <input class="form-control-sm" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkL_N($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
-                </div>
-            </div> <br>
-            <div *ngIf="id_reembolso" class="around">
-                <div class="mt-3 class">
-                    <label *ngIf="id_reembolso && (!sameU|| updateR?.observacionesaprobador !== undefined || updateR?.observacionespagado !== undefined )" class="control-label" for="observaciones">Observaciones: </label><br>
-                    <input *ngIf=" aprobador || (!aprobador && updateR?.observacionesaprobador !== undefined)" class="form-control-sm" id="observacionesaprobador" placeholder="Observaciones" formControlName="observacionesaprobador" type="text" data-toggle="tooltip" title="*Campo obligatorio"
-                        (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.observacionesaprobador.errors }"><br><br>
-                    <input *ngIf="(tesorero || financiero) || (updateR?.observacionespagado !== undefined && sameU)" class="form-control-sm" id="observacionespagado" placeholder="Observaciones" formControlName="observacionespagado" type="text" data-toggle="tooltip" title="*Campo obligatorio"
-                        (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.observacionespagado.errors }">
-                </div>
-            </div>
-            <br>
-            <label class="class ml-5" *ngIf="!id_reembolso">Subir comprobantes: </label><br>
-            <div *ngIf="!id_reembolso" class="around">
-                <div *ngIf="(archivos.length <=  2)" class="drop-img mt-3 col-md-4">
-                    <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
 
-                        <div id="filesButton">
-                            <input id="fichero" type="file" accept="image/*, application/pdf, .xlsx, .xls" (change)="botonFiles($event)">
-                            <label for="fichero" class="circle"></label>
+<h1 class="center">{{ titulo }}</h1>
+<div class="m-2 card">
+    <app-pago [email]="updateR.solicitante" *ngIf="userLog.rol !=='Usuario' && updateR.estatus == 'Aprobado'"></app-pago>
+
+    <div class="loading" *ngIf="loading">Loading&#8230;</div>
+    <form class="p-3" [formGroup]="reembolsoForm" (ngSubmit)="onSubmit()">
+        <div class="between">
+            <div *ngIf="userLog.rol !== 'Usuario'" class="mt-3 col-md-4">
+                <label class="control-label" for="jefe">Solicitante</label><br>
+                <input class="form-control form-control-sm" id="jefe" placeholder="Correo" formControlName="solicitante" type="email" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.solicitante.errors }">
+                <p id="error2" class="mt-2" *ngIf="reembolsoForm.get('solicitante').hasError('email')">*Correo Invalido</p>
+                <!-- <select id="jefe"formControlName="solicitante"class="form-control form-control-sm"[ngClass]="{ 'is-invalid': submitted && fval.solicitante.errors }">
+                    <option  disabled [value]="fval.solicitante.value">{{fval.solicitante.value}} </option>
+                    <option *ngFor="let lider of usuarios">{{lider.correo}} </option>
+                </select> -->
+            </div>
+            <div class="mt-3 col-md-4">
+                <label class="control-label mr-2" for="proyecto">Proyecto</label><br>
+                <select id="proyecto" class="form-control form-control-sm" formControlName="proyecto" (change)="valor(reembolsoForm.value.proyecto)" [ngClass]="{ 'is-invalid': submitted && fval.proyecto.errors }">
+                    <option  disabled [value]="fval.proyecto.value">{{fval.proyecto.value | titlecase}} </option>
+                    <option *ngFor="let proyecto of proyectos">{{proyecto.nombre}} </option>
+                </select>
+            </div>
+            <div class="mt-3 col-md-4">
+                <label class="control-label" for="fecha">Fecha<span><i class="ml-2 far fa-calendar-alt"></i></span> </label>
+                <input class="form-control form-control-sm" id="fecha" [min]="proyecto.fechaini" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.fecha.errors }">
+                <p id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
+            </div>
+
+            <div class="mt-3 class col-md-8">
+                <label class="control-label" for="monto">Monto</label><br>
+                <input class="form-control form-control-sm" id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
+            </div>
+            <div class="col-md-4 mt-3">
+                <label class="control-label mr-2" for="estatus">Estatus</label><br>
+                <select id="estatus" formControlName="estatus" [ngClass]="{ 'is-invalid': submitted && fval.estatus.errors }" (change)="changeStatus($event.target.value)">
+                    <option  disabled [value]='fval.estatus.value'>{{fval.estatus.value}}</option>
+                    <option *ngIf="userLog.rol !== 'Financiero' && updateR.estatus == 'Aprobado'" value='Aprobado'>Aprobado</option>
+                    <option *ngIf="userLog.rol !== 'Financiero' && updateR.estatus == 'Aprobado'" value='Rechazado'>Rechazado</option>
+                    <option *ngIf="userLog.rol !== 'Aprobador' && updateR.estatus == 'Aprobado'" value="Pagado">Pagado</option>
+                </select>
+            </div>
+            <div class="mt-3 class col-md-8">
+                <label class="control-label" for="motivo">Motivo</label><br>
+                <input class="form-control form-control-sm" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkL_N($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
+            </div>
+            <div class="mt-3 col-md-4">
+                <label class="control-label mr-2" for="tipo_gasto">Tipo gasto</label><br>
+                <select id="tipo_gasto" class="selector form-control  form-control-sm" formControlName="tipo_gasto" [ngClass]="{ 'is-invalid': submitted && fval.tipo_gasto.errors }">
+                <option disabled [value]='fval.tipo_gasto.value'>{{fval.tipo_gasto.value | titlecase}}</option>
+                <option *ngFor="let gto of tipoGto">{{gto.gasto}}</option>
+              </select>
+            </div>
+            <div class="mt-3 class col-md-12" *ngIf="id_reembolso !== null">
+                <label class="control-label" for="observaciones">Observaciones</label>
+                <input class="form-control form-control-sm" id="observacionesaprobador" placeholder="Observaciones Aprobado/Rechazado" formControlName="observacionesaprobador" type="text" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.observacionesaprobador.errors }"><br><br>
+                <input class="form-control form-control-sm" id="observacionespagado" placeholder="Observaciones Pagado" formControlName="observacionespagado" type="text" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.observacionespagado.errors }">
+            </div>
+
+            <div class="col-md-12 mt-3">
+                <label class="class" *ngIf="!id_reembolso">Subir comprobantes</label><br>
+                <div *ngIf="!id_reembolso" class="around">
+                    <div *ngIf="(archivos.length <=  2)" class="drop-img mt-3 col-md-4">
+                        <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
+                            <div id="filesButton">
+                                <input id="fichero" type="file" accept="image/*, application/pdf, .xlsx, .xls, text/xml" (change)="botonFiles($event)">
+                                <label for="fichero" class="circle"></label>
+                            </div>
                         </div>
+                        <br>
                     </div>
                     <br>
+                    <div id="tabla" class="mt-3 col-md-6">
+                        <table class="table mt-3" *ngIf="archivos.length > 0">
+                            <thead>
+                                <tr>
+                                    <th *ngFor="let ht of headTitle"> {{ht}}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let archivo of archivos">
+                                    <td> {{archivo.nombreArchivo}}</td>
+                                    <td class="between">
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
+                                        </div>
+                                        <i class="fas fa-times ex" (click)="limpiarArchivos(archivos,archivo)"></i>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <br>
-                <div id="tabla" class=" mt-3 col-md-4">
-                    <table class="table mt-3" *ngIf="archivos.length > 0">
-                        <thead>
-                            <tr>
-                                <th *ngFor="let ht of headTitle"> {{ht}}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let archivo of archivos">
-                                <td> {{archivo.nombreArchivo}}</td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-striped  " role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
-                                    </div>
-                                    <i class="fas fa-times ex " (click)="limpiarArchivos(archivos,archivo)"></i>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+
             </div>
-            <br>
-            <div *ngIf="actualizar" class="center mt-3">
-                <button mdbBtn mdbWavesEffect type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i *ngIf=" botonCancelar === 'Cancelar'" class="mr-3 fas fa-times"></i><i *ngIf=" botonCancelar !== 'Cancelar'"  class=" mr-3 fa fa-arrow-left" aria-hidden="true"></i>
+        </div>
+
+        <br>
+        <div *ngIf="actualizar" class="center mt-3">
+            <button mdbBtn mdbWavesEffect type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i *ngIf="botonCancelar === 'Cancelar'"class="mr-3 fas fa-times"></i><i *ngIf="botonCancelar !== 'Cancelar'"class="mr-3 fa fa-arrow-left"aria-hidden="true"></i>
                     {{botonCancelar}} </button>
-                <button mdbBtn mdbWavesEffect *ngIf=" botonCancelar === 'Cancelar'" type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
+            <button mdbBtn mdbWavesEffect *ngIf="botonCancelar === 'Cancelar'" type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
                         Actualizar</button>
-            </div>
-            <div class="center mt-3">
-                <button mdbBtn mdbWavesEffect #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
+        </div>
+        <div class="center mt-3">
+            <button mdbBtn mdbWavesEffect #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
                     {{boton}}</button>
-            </div>
+        </div>
 
-        </form>
-    </div>
-
+    </form>
 </div>
