--- a/src/app/components/altas/registro-oficina/registro-oficina.component.html
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.html
@@ -10,7 +10,7 @@
                 <div class="flex-container">
                     <div class=" ml-5 col-md-4">
                         <div class="mt-3 class">
-                            <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt"></i></span> </label>
+                            <label class="control-label" for="fecha">Fecha<span><i class="ml-2 far fa-calendar-alt"></i></span> </label>
                             <p #error id="error" *ngIf="submitted && f.fecha.invalid">*Este campo no puede ir vacío</p>
                             <input class="form-control-sm" id="fecha" placeholder="Fecha" formControlName="fecha" type="date">
                         </div>
@@ -18,7 +18,7 @@
                     <br>
                     <div class="around">
                         <div class="mt-3 class">
-                            <label class="control-label" for="monto">Monto: </label>
+                            <label class="control-label" for="monto">Monto</label>
                             <input class="form-control-sm" id="monto" placeholder="Monto" formControlName="cantidad" type="number" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && f.cantidad.errors }">
                             <br/>
                         </div>
@@ -43,7 +43,7 @@
                 <div class="flex-container">
                     <div class="around">
                         <div class="mt-3 col-md-3">
-                            <label class="control-label" for="partida">Saldo disponible: </label><br>
+                            <label class="control-label" for="partida">Saldo disponible</label><br>
                             <div class="btn-group">
                                 <input disabled class="form-control-sm col-md-6" id="partida" value="{{saldoDisp | currency}}" type="text">
                                 <button mdbBtn mdbWavesEffect class="btn btn-outline-info btn-sm" data-toggle="tooltip" data-placement="top" data-tooltip="Si hay un nuevo ingreso o no alcanza el saldo disponible puedes devolverlo y comenzar una nueva partida" type="button" (click)="devolver()">
@@ -55,7 +55,7 @@
                         <div class="mt-3 col-md-2"><input type="text" id="vacio" disabled></div>
                         <br>
                         <div class="mt-3 col-md-3">
-                            <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt"></i></span> </label>
+                            <label class="control-label" for="fecha">Fecha<span><i class="ml-2 far fa-calendar-alt"></i></span> </label>
                             <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" min="{{partidaActual?.fecha}}">
                             <p #error id="error" *ngIf="submitted && ofForm.get('fecha').hasError('required')">*Este campo no puede ir vacío</p>
                         </div>
@@ -64,25 +64,25 @@
                 <br>
                 <div class="around">
                     <div class="mt-3 class">
-                        <label class="control-label" for="monto">Monto: </label>
+                        <label class="control-label" for="monto">Monto</label>
                         <input class="form-control" id="monto" placeholder="Monto" formControlName="cantidad" type="number" min="1" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
                         <p id="error" *ngIf="submitted && ofForm.get('cantidad').hasError('required')">*Este campo no puede ir vacío</p>
 
                         <br/>
-                        <label class="control-label" for="descripcion">Motivo: </label>
+                        <label class="control-label" for="descripcion">Motivo</label>
                         <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
                         <p id="error" *ngIf="submitted && ofForm.get('motivo').hasError('required')">*Este campo no puede ir vacío</p>
                         <br/>
                     </div>
                 </div>
                 <br>
-                <label class="class m-5" *ngIf="!id_of">Subir comprobantes: </label><br>
+                <label class="class m-5" *ngIf="!id_of">Subir comprobantes</label><br>
                 <div *ngIf="!id_of" class="around">
                     <div *ngIf="(archivos.length <=  2)" class="drop-img mt-3 col-md-4">
                         <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
 
                             <div id="filesButton">
-                                <input id="fichero" type="file" accept="image/*, application/pdf, .xlsx, .xls" (change)="botonFiles($event)">
+                                <input id="fichero" type="file" accept="image/*, application/pdf, .xlsx, .xls, text/xml" (change)="botonFiles($event)">
                                 <label for="fichero" class="circle"></label>
                             </div>
                         </div>
