--- a/src/app/components/altas/usuarios/usuarios.component.html
+++ b/src/app/components/altas/usuarios/usuarios.component.html
@@ -1,136 +1,108 @@
 <navbar></navbar>
-<div class="column">
-    <h1 class="center">{{ titulo }}</h1>
-    <div class="m-3 card">
-        <div class="loading" *ngIf="loading">Loading&#8230;</div>
-        <form class="m-3" [formGroup]="userForm" (ngSubmit)="onSubmit()">
-            <div class="around">
-                <div class="col-md-3 mt-3">
-                    <label class="control-label" for="ap_p">Apellido Paterno: </label>
-                    <input class="form-control-sm" id="ap_p" placeholder="Apellido Paterno" formControlName="ap_p" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.ap_p.errors }">
-                    <p id="error" class="error" *ngIf="submitted && fval.ap_p.invalid">*Este campo no puede ir vacío</p>
-                </div>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label" for="ap_m">Apellido Materno: </label>
-                    <input class="form-control-sm" id="ap_m" placeholder="Apellido Materno" formControlName="ap_m" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.ap_m.errors }">
-                    <p id="error" class="error" *ngIf="submitted && fval.ap_m.invalid">*Este campo no puede ir vacío</p>
-                </div>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label" for="nombre">Nombre(s): </label>
-                    <input class="form-control-sm" id="nombre" placeholder="Nombre(s)" formControlName="nombre" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
-                    <p id="error" class="error" *ngIf="submitted && fval.nombre.invalid">*Este campo no puede ir vacío</p>
-                </div>
-            </div><br>
-            <div class="around">
-                <div class="col-md-3 mt-3">
-                    <label class="control-label" for="correo">Correo: </label><br>
-                    <input class="form-control-sm" id="correo" placeholder="Correo" formControlName="correo" type="email" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.correo.errors }">
-                    <p id="error" class="error" *ngIf="userForm.get('correo').hasError('email')">*Correo Invalido</p>
-                    <p id="error" class="error" *ngIf=" submitted && userForm.get('correo').hasError('required')">*Este campo no puede ir vacío</p>
-                </div><br>
-                <div *ngIf="(tesorero || rolU || financiero) === true" class="col-md-3 mt-3">
-                    <input type="text" id="vacio" disabled>
-                </div> <br>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label" for="password">Contraseña: </label><br>
-                    <input class="form-control-sm" minlength="6" id="password" placeholder="Contraseña" formControlName="password" type="text" data-toggle="tooltip" title="*Min 6 caracteres" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }">
-                    <p id="error" class="error" *ngIf=" submitted && userForm.get('password').hasError('required')">*Este campo no puede ir vacío</p>
-                    <p id="error" class="error" *ngIf=" submitted && userForm.get('password').hasError('minlength')">Mínimo 6 caracteres</p>
-                </div>
-                <br>
-                <div *ngIf="(admin || aprobador) === true" class="col-md-3 mt-3">
-                    <label class="control-label" for="resp_area">Personal a su cargo: </label><br>
-                    <label class="switch">
-                        <input type="checkbox" formControlName="resp_area">
+<h1 class="center">{{ titulo }}</h1>
+<div class="m-2 card ">
+    <div class="loading" *ngIf="loading">Loading&#8230;</div>
+    <form class="p-3" [formGroup]="userForm" (ngSubmit)="onSubmit()">
+        <div class="between">
+            <div class="col-md-4 mt-3">
+                <label class="control-label" for="ap_p">Apellido Paterno</label>
+                <input class="form-control form-control-sm" id="ap_p" placeholder="Apellido Paterno" formControlName="ap_p" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.ap_p.errors }">
+            </div>
+            <div class="col-md-4 mt-3">
+                <label class="control-label" for="ap_m">Apellido Materno</label>
+                <input class="form-control form-control-sm" id="ap_m" placeholder="Apellido Materno" formControlName="ap_m" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.ap_m.errors }">
+            </div>
+            <div class="col-md-4 mt-3">
+                <label class="control-label" for="nombre">Nombre(s)</label>
+                <input class="form-control form-control-sm" id="nombre" placeholder="Nombre(s)" formControlName="nombre" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
+            </div>
+            <div class="col-md-4 mt-3">
+                <label class="control-label" for="correo">Correo</label><br>
+                <input class="form-control form-control-sm" id="correo" placeholder="Correo" formControlName="correo" type="email" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.correo.errors }">
+                <p id="error" class="error" *ngIf="userForm.get('correo').hasError('email')">*Correo Invalido</p>
+            </div>
+            <div class="col-md-4 mt-3">
+                <label class="control-label" for="password">Contraseña</label><br>
+                <input class="form-control form-control-sm" minlength="6" id="password" placeholder="Contraseña" formControlName="password" type="text" data-toggle="tooltip" title="*Min 6 caracteres" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }">
+                <p id="error" class="error" *ngIf=" submitted && userForm.get('password').hasError('minlength')">Mínimo 6 caracteres</p>
+            </div>
+            <div class="col-md-4 mt-3" *ngIf="!tesorero">
+                <label class="control-label" for="resp_area">Personal a su cargo</label><br>
+                <label class="switch">
+                        <input type="checkbox" formControlName="resp_area" >
                         <span class="slider round"></span>
                       </label>
-                </div>
-            </div><br>
-            <div *ngIf="(admin || aprobador) === true" class="around">
-                <div class="col-md-3 mt-3">
-                    <label class="control-label" for="resp_asg">Jefe Inmediato: </label><br>
-                    <select id="resp_asg" formControlName="resp_asg" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
-                     <option disabled value='Jefe inmediato'>Jefe inmediato</option>
-                     <option *ngIf="updateU" disabled value='{{updateU?.resp_asg}}'>{{updateU?.resp_asg}}</option> 
-                     <option *ngFor="let resp of usuarios">{{resp.nombre}}</option> 
+            </div>
+            <div class="col-md-4 mt-3" *ngIf="!tesorero">
+                <label class="control-label" for="resp_asg">Jefe Inmediato</label><br>
+                <select class="form-control form-control-sm" id="resp_asg" formControlName="resp_asg" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.resp_asg.errors }">
+                     <option  disabled [value]='fval.resp_asg.value'>{{fval.resp_asg.value}}</option> 
+                     <option *ngFor="let resp of usuarios">{{resp.correo}}</option> 
                      </select>
-                    <p id="error" *ngIf="submitted && (fval.resp_asg.value === 'Jefe inmediato')">*Este campo no puede ir vacío</p>
-                </div><br>
-                <div class="col-md-3 mt-3">
-                    <input type="text" id="vacio" disabled>
-                </div> <br>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label" for="area">Área: </label><br>
-                    <select id="area" formControlName="area" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
-                        <option *ngIf="!id_user" disabled value='Área'>Área</option>
-                        <option *ngIf="updateU" disabled [value]="updateU?.area" >{{updateU?.area}}</option>
+            </div>
+            <div class="col-md-4 mt-3" *ngIf="!tesorero">
+                <label class="control-label" for="area">Área</label><br>
+                <select id="area" class="form-control form-control-sm" formControlName="area" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.area.errors }">
+                        <option disabled [value]="fval.area.value" >{{fval.area.value}}</option>
                         <option *ngFor="let area of areas">{{area.nombre_area}}</option>
                     </select>
-                    <p id="error" *ngIf="submitted && (fval.area.value === 'Área')">*Este campo no puede ir vacío</p>
-                </div>
             </div>
-
-            <div *ngIf="(admin || aprobador) === true" class="around">
-                <div class=" col-md-3 mt-3">
-                    <label class="control-label" for="rol">Rol: </label><br>
-                    <select id="rol" formControlName="rol" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
-                        <option  disabled value='Rol'>Rol</option>
-                        <option *ngIf="updateU" disabled [value]="updateU?.rol" >{{updateU?.rol}}</option>
+            <div class="col-md-4 mt-3" *ngIf="!tesorero">
+                <label class="control-label" for="rol">Rol</label><br>
+                <select class="form-control form-control-sm" id="rol" formControlName="rol" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" [ngClass]="{ 'is-invalid ': submitted && fval.rol.errors }">
+                        <option disabled [value]="fval.rol.value" >{{fval.rol.value}}</option>
                         <option value="Administrador">Administrador</option>
                         <option value="Aprobador">Aprobador</option>
                         <option value="Financiero">Financiero</option>
                         <option value="Tesorero">Tesorero</option>
                         <option value="Usuario">Usuario</option>
                     </select>
-                    <p id="error" *ngIf="submitted && (fval.rol.value === 'Rol')">*Este campo no puede ir vacío</p>
-                </div>
-                <br>
-                <div *ngIf="!id_user || activado===true" class="mt-3 col-md-3"><input type="text" id="vacio" disabled></div>
-                <br>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label" for="puesto">Puesto: </label><br>
-                    <input class="form-control-sm" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid ': submitted &&
-                fval.puesto.errors }">
-                    <p id="error" *ngIf="submitted && (fval.puesto.value === '')">*Este campo no puede ir vacío</p>
-                </div>
-                <div *ngIf="admin && activado===false" class="col-md-3 mt-3">
-                    <label class="control-label" for="activo">Activo: </label><br>
+            </div>
+            <div class="col-md-4 mt-3" *ngIf="!tesorero">
+                <label class="control-label" for="puesto">Puesto</label><br>
+                <input class="form-control form-control-sm" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid ': submitted && fval.puesto.errors }">
+            </div>
+            <!-- <div *ngIf="admin && activado===false" class="col-md-4 mt-3">
+                    <label class="control-label" for="activo">Activo</label><br>
                     <label class="switch">
                         <input type="checkbox" formControlName="activo">
                         <span class="slider round"></span>
                       </label>
+                </div> -->
+            <div class="col-md-4 mt-3" *ngIf="id_user !== null && (userLog.rol !== 'Usuario' || userLog.rol !== 'Financiero')">
+                <label class="control-label" for="nombre">Banco</label>
+                <input class="form-control form-control-sm" id="nombre" placeholder="Banco" formControlName="banco" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.banco.errors }">
+            </div>
+            <div class="col-md-4 mt-3" *ngIf="id_user !== null && (userLog.rol !== 'Usuario' || userLog.rol !== 'Financiero')">
+                <label class="control-label" for="clave">Clave Interbancaria</label><br>
+                <input class="form-control form-control-sm" id="clave" placeholder="Clave interbancaria" maxlength="18" minlength="18" (keyup)="checkNumeros($event)" formControlName="clave" type="text" data-toggle="tooltip" title="*min. 18 digitos" [ngClass]="{ 'is-invalid': submitted && fval.clave.errors }">
+                <p id="error" class="error" *ngIf=" submitted && userForm.get('clave').hasError('minlength')">Mínimo 18 digitos</p>
+
+            </div>
+            <div class="col-md-6 mt-3" *ngIf="same">
+                <h6>Selecciona una imagen de usuario [Obligatoria]</h6><br>
+                <div id="imagen">
+                    <input id="fichero" type="file" type="file" accept="image/*" (change)="avatar($event)">
+                    <label for="fichero" class="circle"></label>
                 </div>
-
+                <input *ngIf="imgUser" [value]="imgUser.nombreArchivo" disabled>
             </div>
 
-            <div class="around">
-                <div *ngIf="sameU" class="col-md-3 mt-3">
-                    <h6>Selecciona una imagen de usuario [Obligatoria]</h6><br>
-                    <div id="imagen">
-                        <input id="fichero" type="file" type="file" accept="image/*" (change)="avatar($event)">
-                        <label for="fichero" class="circle"></label>
-                    </div>
-                    <input *ngIf="imgUser" value="{{imgUser?.nombreArchivo}}" disabled>
-                </div> <br>
-                <div *ngIf="!sameU" class="mt-3 col-md-3"><input type="text" id="vacio" disabled></div>
-                <br>
-                <div *ngIf="id_user" class="col-md-3 mt-3 center">
-                    <img *ngIf="!sameU" src="{{updateU?.imagen}}" width="100">
-                </div> <br>
-                <div class="mt-3 col-md-3"><input type="text" id="vacio" disabled></div>
-                <br>
-            </div>
+            <div *ngIf=" id_user !== null" class="col-md-4 mt-3 center">
+                <img [src]="updateU.imagen" width="100">
+            </div> <br>
             <br>
-            <div *ngIf="actualizar" class="center">
-                <button mdbBtn mdbWavesEffect type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class=" mr-3 fas fa-times"></i>
+        </div>
+        <br>
+        <div *ngIf="actualizar" class="center">
+            <button mdbBtn mdbWavesEffect type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class=" mr-3 fas fa-times"></i>
                     Cancelar</button>
-                <button mdbBtn mdbWavesEffect type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
+            <button mdbBtn mdbWavesEffect type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
                 Actualizar</button>
-            </div>
-            <div class="center">
-                <button mdbBtn mdbWavesEffect #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
+        </div>
+        <div class="center">
+            <button mdbBtn mdbWavesEffect #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
                     {{boton}}</button>
-            </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
